--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
         <!---------------------------intro----------------------->
         <header>
             <nav>
-                <a href="about">About</a>
-                <a href="work-experience">Work Experience</a>
-                <a href="education">Education</a>
-                <a href="contact">Contact</a>
+                <a href="#about">About</a>
+                <a href="#work-experience">Work Experience</a>
+                <a href="#education">Education</a>
+                <a href="#contact">Contact</a>
             </nav>
             <div id="about" class="content-wrap">
                 <img class="profile-img" 
